--- a/src/components/planItem/planItem.css
+++ b/src/components/planItem/planItem.css
@@ -1,8 +1,10 @@
 .plan_item{
     width: 100%;
+    padding: 0 0.2rem;
+    background: #fff;
 }
 .pi_header{
-
+    padding-top: 0.1rem;
 }
 .pi_header_avatar{
     width: 0.8rem;
@@ -14,5 +16,47 @@
     height: 100%;
     border-radius: 50%;
 }
-
-
+.pi_timewrap{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 0.2rem;
+}
+.pi_user{
+    font-size: 0.28rem;
+}
+.pi_time{
+    padding-top: 0.1rem;
+    font-size: 0.24rem;
+    color: #ccc;
+}
+.pi_con{
+    margin: 0.2rem 0;
+}
+.pi_imgwrap{
+    margin: 0.2rem 0;
+    flex-wrap: wrap;
+}
+.pi_imgwrap img{
+    width: 2.3rem;
+    height: 2.3rem;
+    margin: 0.06rem 0.06rem 0 0;
+}
+.pi_img_one{
+    margin: 0.2rem 0;
+}
+.pi_img_one img{
+    width: 4rem;
+    height: 4rem;
+}
+.pi_support{
+    height: 0.6rem;
+    border-top: 1px solid #efefef;
+}
+.pi_support_item{
+    width: 33%;
+    padding-left: 0.36rem;
+}
+.pi_support_item .iconfont{
+    margin-right: 0.1rem;
+}
