--- a/src/pages/regist/regist.css
+++ b/src/pages/regist/regist.css
@@ -1,6 +1,32 @@
 .ri_wrap{
     position: relative;
 }
+.ri_wrap_inpwrap{
+    position: relative;
+    padding: 0 0.3rem;
+    font-size: 0.32rem;
+    background: #fff;
+}
+.ri_wrap_inpwrap p{
+    width: 1.7rem;
+    height: 0.88rem;
+    margin-right: 5px;
+    line-height: 0.88rem;
+}
+.ri_wrap_inpwrap input{
+    display: block;
+    height: 0.88rem;
+}
+.ri_wrap_inpwrap .iconfont{
+    position: absolute;
+    height: 100%;
+    right: 0.2rem;
+    line-height: 0.88rem;
+    font-size: 0.32rem;
+}
+.ri_get_code{
+    font-size: 0.24rem;
+}
 .rg_checkcode{
     position: absolute;
     right: 0.26rem;
