--- a/src/pages/my/changeUserInfo/changeUserInfo.css
+++ b/src/pages/my/changeUserInfo/changeUserInfo.css
@@ -14,3 +14,20 @@
     height: 100%;
     text-indent: 0.2rem;
 }
+.cui_nick textarea{
+    width: 100%;
+    height: 1.2rem;
+    border: none;
+}
+.cui_sex{
+    padding: 0.4rem 0.3rem 0 0.3rem;
+}
+.cui_sex p{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 0.8rem;
+    border: 1px solid #eee;
+    padding: 0 0.3rem;
+    background: #fff;
+}
