--- a/src/pages/appPush/appPush.css
+++ b/src/pages/appPush/appPush.css
@@ -1,9 +1,16 @@
 .app_push{
     border-top: 1px solid transparent;
-    padding:0 0.3rem;
+    padding:0 0.3rem 1.5rem 0.3rem;
+}
+.app_push_itemwrap{
+    margin-top: 0.3rem;
+}
+.app_push_item_push_time{
+    padding-bottom: 0.1rem;
+    text-align: center;
+    color: #666;
 }
 .app_push_item{
-    margin-top: 1rem;
     background: #fff;
     border: 1px solid #eee;
     border-radius: 0.16rem;
@@ -30,6 +37,7 @@
 .app_push_item_main{
     padding: 0 0.2rem;
 }
+
 .apppi_item{
     display: flex;
     align-items: center;
@@ -39,6 +47,9 @@
     width: 1.6rem;
     color: #828282;
     flex-shrink: 0;
+}
+.app_push_item_main_time .app_push_item_main_time_p{
+    width: 100%;
 }
 .apppi_item span{
     color: #000;
