--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -19,21 +19,18 @@
     height: 100%;
     margin-top: -0.02rem;
 }
-/*.ho_input_wrap{*/
-/*    position: relative;*/
-/*}*/
-/*.ho_input_wrap .p_icon{*/
-/*    position: absolute;*/
-/*    left: 0.1rem;*/
-/*    font-size: 0.32rem;*/
-/*}*/
-/*.ho_input_wrap input{*/
-/*    width: 100%;*/
-/*    height: 0.5rem;*/
-/*    text-indent: 0.5rem;*/
-/*    border-radius: 0.2rem;*/
-/*    background: #F4F4F8;*/
-/*}*/
+.ho_header .iconjiahao{
+    flex-shrink: 0;
+    width: 0.4rem;
+    height: 0.4rem;
+    border-radius: 50%;
+    margin-left: 0.1rem;
+    text-align: center;
+    line-height: 0.4rem;
+    font-size: 0.24rem;
+    background: #FBBA1C;
+    color: #FFF;
+}
 .ho_list{
     padding-bottom: 1.1rem;
     background: #F4F4F8;
