--- a/src/components/planItem/planItem.css
+++ b/src/components/planItem/planItem.css
@@ -61,3 +61,9 @@
     font-size: 0.32rem;
     margin-right: 0.1rem;
 }
+.pi_support_item.pi_support_item_active{
+    color: #FE7C12;
+}
+.pi_support_item .icondianzan1{
+    font-size: 0.4rem;
+}
